[package]
name = "tran_api"
version = "0.1.6"
edition = "2024"
license = "MulanPSL-2.0"
repository = "https://github.com/i18n-site/tran_api.git"
homepage = "https://github.com/i18n-site/tran_api/tree/dev"
description = "transalte api"


[dependencies]
bytes = "1.10.1"
const-str = "0.6.2"
genv = "0.1.16"
grpc_client = "0.1.6"
http = "1.3.1"
prost = "0.13"
static_init = "1.0.4"
tokio = { version = "1.46.1", features = ["rt", "macros", "rt-multi-thread"] }
tonic = { version = "0.13.1", default-features = false }

[build-dependencies]
tonic-build = "0.13.1"